# InboxPie

./: .gitignore  CONTRIBUTING.md  PRIVACY.md  README.md  RELEASE_CHECKLIST.md  background.js  manifest.json
.github/: FUNDING.yml
CLI/: PRIVACY.md  README.md  build-publish.sh  pyproject.toml
CLI/src/inboxpie_cli/: __init__.py  __main__.py  cli.py  config.py  models.py  permissions.py  privacy.py
CLI/src/inboxpie_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
CLI/src/inboxpie_cli/analytics/: __init__.py  aggregations.py
CLI/src/inboxpie_cli/output/: __init__.py  csv_json.py  html_report.py  terminal.py
CLI/src/inboxpie_cli/sources/: __init__.py  emlx.py  envelope_index.py  scan.py
CLI/src/inboxpie_cli/templates/: report.html.j2
CLI/tests/: test_analytics.py  test_cli.py  test_emlx_source.py  test_envelope_index.py  test_permissions.py
CLI/tests/fixtures/: sample.emlx
THUNDERBIRD/: CODE_OF_CONDUCT.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  background.js  manifest.json
THUNDERBIRD/dashboard/: dashboard.js  popup.html  styles.css
dashboard/: dashboard.js  popup.html  styles.css
