[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inboxpie"
version = "1.0.2"
description = "InboxPie — Visualize and clean your inbox. Private, local, open source"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "AKSarav" }]
keywords = ["email", "apple-mail", "inbox", "analytics", "privacy"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Topic :: Communications :: Email",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "jinja2>=3.1",
  
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "twine>=6.2.0",
  "build"
  ]

[project.scripts]
inboxpie = "inboxpie_cli.cli:app"

[project.urls]
Homepage = "https://github.com/AKSarav/InboxPie"
Repository = "https://github.com/AKSarav/InboxPie"
Issues = "https://github.com/AKSarav/InboxPie/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
inboxpie_cli = ["templates/**/*", "static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
